# GRBLHAL-Sim

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
packaging/: grbl-core-flexihal-sim.patch
packaging/linux/: package-linux.sh
packaging/macos/: package-macos.sh
packaging/windows/: package-windows.ps1
plugins/: CMakeLists_plugins.txt  SETTINGS_LOCK_README.md  exclusion_zones.c  exclusion_zones.h  flexihal_atc.c  sienci-atci-plugin.c  tooltable.c  tooltable.h
src/: driver.c  driver.h  eeprom.c  eeprom.h  fs_sim.c  fs_sim.h  grbl_eeprom_extensions.c  grbl_eeprom_extensions.h  grbl_interface.c  grbl_interface.h  macros.c  main.c  mcu.c  mcu.h  msvc_compat.h  my_plugin.c  platform.h  platform_linux.c  platform_linux.h  platform_windows.c  platform_windows.h  serial.c  serial.h  sim_stubs.h  simulator.c  simulator.h  uf2.c  uf2.h  websocket.c  websocket.h
ui/windows-launcher/: CMakeLists.txt
ui/windows-launcher/src/: main.cpp
